--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=6.29.5",
+    "lxml>=5.3.1",
     "pandas>=2.2.3",
+    "pyarrow>=19.0.1",
     "ruff>=0.11.2",
 ]
