--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=6.29.5",
     "lxml>=5.3.1",
+    "matplotlib>=3.10.1",
     "pandas>=2.2.3",
     "pyarrow>=19.0.1",
     "ruff>=0.11.2",
